# Sarandi_Igor

./: Diagrams.uml  PacMan.sln  README.md
PacMan/: BaseController.cpp  BaseController.h  Blinky.cpp  Blinky.h  Booster.cpp  Booster.h  Border.cpp  Clyde.cpp  Clyde.h  Coins.cpp  Coins.h  Controller.cpp  Controller.h  CreateMap.cpp  Field.cpp  Fruits.cpp  Fruits.h  GameController.cpp  GameController.h  Ghosts.cpp  Ghosts.h  Info.cpp  Info.h  Inky.cpp  Inky.h  Map.cpp  Map.h  MotionlessObjects.h  MovingObjects.cpp  MovingObjects.h  Objects.cpp  Objects.h  PacMan.vcxproj  PacMan.vcxproj.filters  Pacman.cpp  Pacman.h  Pinky.cpp  Pinky.h  Source.cpp  main.cpp
PacMan v2.0/: BaseController.cpp  BaseController.h  Booster.cpp  CMakeLists.txt  Controller.cpp  Controller.h  CreateMap.h  Info.h  Inky.cpp  Pacman.cpp  main.cpp
PacMan/Debug/: vc141.idb
PacMan/Debug/PacMan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PacMan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PacMan/Release/PacMan.tlog/: CL.command.1.tlog  CL.write.1.tlog  PacMan.lastbuildstate  PacMan.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PacMan/x64/Debug/: vc141.idb
PacMan/x64/Debug/PacMan.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
PacMan_v2.0/: BaseController.cpp  BaseController.h  Blinky.cpp  Border.cpp  Clyde.cpp  Coins.cpp  Controller.cpp  Field.cpp  Fruits.cpp  Fruits.h  Ghosts.cpp  Info.cpp  Inky.h  MotionlessObjects.cpp  MovingObjects.h  Pacman.h  Pinky.cpp
Release/: PacMan.iobj  PacMan.ipdb  PacmanLite.iobj  PacmanLite.ipdb
(+7 files in other folders)
